--- a/src/components/step-card/step-card.less
+++ b/src/components/step-card/step-card.less
@@ -1,6 +1,10 @@
 @import "../../index";
-:host {
-  .step-card {
-    background-color: @color-panel-bg;
+
+.step-card {
+  background-color: @color-panel-bg;
+
+  span {
+    font-size: 16px;
+    line-height: 24px;
   }
 }
